--- a/index.html
+++ b/index.html
@@ -17,9 +17,16 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap" rel="stylesheet">
-
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX" crossorigin="anonymous"></script>
-
+  <script type="text/javascript">
+	atOptions = {
+		'key' : 'ae7371f45912fe1723f1f82a5e6fed6e',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//ominousirritatingpictorial.com/ae7371f45912fe1723f1f82a5e6fed6e/invoke.js"></script>
   <style>
     * {
       box-sizing: border-box;
