--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   </main>
 
   <footer>
-    © 2025 All X World | All x Guide Center
+    © 2025 All X World
   </footer>
   
   <!-- Fullscreen Guide Viewer (Moved outside the main flow for clarity) -->
